<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ADP</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to the American Dream Planner</string>
    <string name="program_description">The American Dream Planner is financial, estate, legacy planning software to help you achieve your personal American Dream.</string>
    <string name="plan_choices">Plan Choices</string>
    <string name="personal">Personal</string>
    <string name="investments">Investments</string>
    <string name="business">Business</string>
    <string name="share">Share</string>
    <string name="income">Income</string>
    <string name="retirement">Retirement</string>
    <string name="life_insurance">Life Insurance</string>
    <string name="results">Results</string>
    <string name="expenses">Expenses</string>
    <string name="real_property">Real Property</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="create_new">Create New</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="growth_rate">Growth rate</string>
    <string name="begin_year">Begin year</string>
    <string name="end_year">End year</string>
    <string name="suggested_name">John Doe</string>
    <string name="suggested_amount">50000</string>
    <string name="suggested_growth_rate">3.00</string>
    <string name="suggested_begin_year">2014</string>
    <string name="suggested_end_year">2018</string>
</resources>
