<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_buttons_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/plan_choices_btn"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center"
        android:text="@string/plan_choices"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/personal_btn"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/personal"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/Investments_btn"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_gravity="center"
        android:text="@string/investments"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/business_btn"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center"
        android:text="@string/business"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/share"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="center"
        android:text="@string/share"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/income_btn"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_gravity="center"
        android:text="@string/income"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/retirement_btn"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="center"
        android:text="@string/retirement"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/life_insurance_btn"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="center"
        android:text="@string/life_insurance"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/results_btn"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_gravity="center"
        android:text="@string/results"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/expenses_btn"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="center"
        android:text="@string/expenses"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/real_property_btn"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_gravity="center"
        android:text="@string/real_property"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/help_btn"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_gravity="center"
        android:text="@string/help"
        android:textSize="12.5dp" />

    <Button
        android:id="@+id/about_btn"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_gravity="center"
        android:text="@string/about"
        android:textSize="12.5dp" />
<!--
    <android.support.v7.widget.Space
        android:layout_column="4"
        android:layout_gravity="fill_vertical"
        android:layout_row="10" />
        -->

</GridLayout>
